--- a/x11-misc/shared-mime-info/ChangeLog
+++ b/x11-misc/shared-mime-info/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/shared-mime-info
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.52 2006/07/08 12:37:23 foser Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.53 2006/07/08 18:40:37 corsair Exp $
+
+  08 Jul 2006; Markus Rothe <corsair@gentoo.org>
+  shared-mime-info-0.17-r2.ebuild:
+  Stable on ppc64; bug #139661
 
 *shared-mime-info-0.18 (08 Jul 2006)
 
