--- a/media-plugins/vdr-calc/ChangeLog
+++ b/media-plugins/vdr-calc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vdr-calc
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-calc/ChangeLog,v 1.2 2006/04/17 16:50:08 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-calc/ChangeLog,v 1.3 2006/07/08 19:08:20 zzam Exp $
+
+  08 Jul 2006; Matthias Schwarzott <zzam@gentoo.org>
+  +files/vdr-calc-0.0.1_rc5-gcc4.diff, vdr-calc-0.0.1_rc5.ebuild:
+  Added gcc4-compatibility patch.
 
   17 Apr 2006; Matthias Schwarzott <zzam@gentoo.org>
   vdr-calc-0.0.1_rc5.ebuild:
