--- a/media-plugins/vdr-sysinfo/ChangeLog
+++ b/media-plugins/vdr-sysinfo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vdr-sysinfo
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-sysinfo/ChangeLog,v 1.4 2006/05/22 21:18:15 hd_brummy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-sysinfo/ChangeLog,v 1.5 2006/07/08 19:28:42 zzam Exp $
+
+  08 Jul 2006; Matthias Schwarzott <zzam@gentoo.org>
+  +files/vdr-sysinfo-0.1.0a-gcc4.diff, vdr-sysinfo-0.1.0a-r1.ebuild:
+  Added gcc4-compatibility patch.
 
 *vdr-sysinfo-0.1.0a-r1 (22 May 2006)
 
