--- a/kde-base/pykde/ChangeLog
+++ b/kde-base/pykde/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/pykde
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/pykde/Attic/ChangeLog,v 1.7 2006/06/25 19:32:57 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/pykde/Attic/ChangeLog,v 1.8 2006/07/08 22:27:27 josejx Exp $
+
+  08 Jul 2006; Joseph Jezak <josejx@gentoo.org> pykde-3.5.0.ebuild:
+  Added ~ppc for bug #113618.
 
   25 Jun 2006; Simon Stelling <blubb@gentoo.org> pykde-3.5.0.ebuild:
   added ~amd64 keyword
