--- a/net-im/gaim/ChangeLog
+++ b/net-im/gaim/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.401 2006/07/08 21:48:23 gothgirl Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.402 2006/07/08 22:41:52 cardoe Exp $
+
+  08 Jul 2006; Doug Goldstein <cardoe@gentoo.org> gaim-1.5.0.ebuild,
+  gaim-2.0.0_beta3-r1.ebuild:
+  split USE='tcltk' to 'tcl' & 'tk' per bug #17808.
 
   08 Jul 2006; gothgirl <gothgirl@gentoo.org> gaim-1.5.0.ebuild,
   gaim-2.0.0_beta3-r1.ebuild:
