--- a/media-plugins/xmms-jack/ChangeLog
+++ b/media-plugins/xmms-jack/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/xmms-jack
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-jack/Attic/ChangeLog,v 1.36 2006/07/07 04:24:08 tsunam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-jack/Attic/ChangeLog,v 1.37 2006/07/09 00:44:59 josejx Exp $
+
+  09 Jul 2006; Joseph Jezak <josejx@gentoo.org> xmms-jack-0.16.ebuild:
+  Marked ppc stable for bug #138227.
 
   07 Jul 2006; Joshua Jackson <tsunam@gentoo.org> xmms-jack-0.16.ebuild:
   Stable x86; bug #138227
