--- a/xfce-base/xfce-utils/ChangeLog
+++ b/xfce-base/xfce-utils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce-utils
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce-utils/Attic/ChangeLog,v 1.68 2006/06/05 22:40:09 genstef Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce-utils/Attic/ChangeLog,v 1.69 2006/07/09 03:32:46 kumba Exp $
+
+  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> xfce-utils-4.2.3.ebuild:
+  Marked stable on mips.
 
   05 Jun 2006; Stefan Schweizer <genstef@gentoo.org>
   +files/nolisten-tcp.patch, xfce-utils-4.2.3.ebuild,
