--- a/xfce-base/xfce4-panel/ChangeLog
+++ b/xfce-base/xfce4-panel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4-panel
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.65 2006/04/22 10:38:46 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.66 2006/07/09 03:22:32 kumba Exp $
+
+  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> xfce4-panel-4.2.3.ebuild:
+  Marked stable on mips.
 
   22 Apr 2006; Markus Rothe <corsair@gentoo.org> xfce4-panel-4.2.3.ebuild:
   Stable on ppc64
