--- a/sys-apps/shadow/ChangeLog
+++ b/sys-apps/shadow/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/shadow
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.153 2006/07/06 01:31:15 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.154 2006/07/09 03:58:39 kumba Exp $
+
+  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> shadow-4.0.15-r2.ebuild:
+  Marked stable on mips.
 
 *shadow-4.0.16-r2 (06 Jul 2006)
 
