--- a/sci-chemistry/molscript/ChangeLog
+++ b/sci-chemistry/molscript/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/molscript
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/molscript/ChangeLog,v 1.2 2006/07/07 05:36:11 dberkholz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/molscript/ChangeLog,v 1.3 2006/07/09 07:12:51 dberkholz Exp $
+
+  09 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>;
+  molscript-2.1.2.ebuild:
+  x86 stable.
 
   07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
   Update to my new email address.
