--- a/sci-chemistry/cns/ChangeLog
+++ b/sci-chemistry/cns/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/cns
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/cns/ChangeLog,v 1.2 2006/07/07 05:30:48 dberkholz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/cns/ChangeLog,v 1.3 2006/07/09 07:15:35 dberkholz Exp $
+
+  09 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; cns-1.1.ebuild:
+  x86/ppc stable.
 
   07 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; metadata.xml:
   Update to my new email address.
