--- a/sci-chemistry/molmol/ChangeLog
+++ b/sci-chemistry/molmol/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/molmol
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/molmol/ChangeLog,v 1.9 2006/07/07 05:35:52 dberkholz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/molmol/ChangeLog,v 1.10 2006/07/09 07:12:34 dberkholz Exp $
+
+  09 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; molmol-2k_p2.ebuild:
+  x86/ppc stable.
 
   07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
   Update to my new email address.
