--- a/sci-chemistry/mopac7/ChangeLog
+++ b/sci-chemistry/mopac7/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/mopac7
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/mopac7/ChangeLog,v 1.8 2006/07/07 05:36:30 dberkholz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/mopac7/ChangeLog,v 1.9 2006/07/09 07:05:46 dberkholz Exp $
+
+  09 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>;
+  mopac7-1.10-r1.ebuild:
+  x86/ppc stable.
 
   07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
   Update to my new email address.
