--- a/sci-chemistry/reduce/ChangeLog
+++ b/sci-chemistry/reduce/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/reduce
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/reduce/ChangeLog,v 1.2 2006/07/07 05:38:15 dberkholz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/reduce/ChangeLog,v 1.3 2006/07/09 07:10:03 dberkholz Exp $
+
+  09 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>;
+  reduce-2.21.030604.ebuild:
+  x86/ppc stable.
 
   07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
   Update to my new email address.
