--- a/sys-cluster/vzctl/ChangeLog
+++ b/sys-cluster/vzctl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/vzctl
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/vzctl/ChangeLog,v 1.28 2006/07/09 10:29:24 phreak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/vzctl/ChangeLog,v 1.29 2006/07/09 17:02:41 phreak Exp $
+
+  09 Jul 2006; Christian Heim <phreak@gentoo.org> -vzctl-3.0.0.4.ebuild,
+  -vzctl-3.0.0.7.ebuild, vzctl-3.0.0.8.ebuild:
+  Marking vzctl-3.0.0.8 stable on x86/amd64; Pruning old versions
 
 *vzctl-3.0.10-r2 (09 Jul 2006)
 
