--- a/kde-base/klaptopdaemon/ChangeLog
+++ b/kde-base/klaptopdaemon/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/klaptopdaemon
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klaptopdaemon/Attic/ChangeLog,v 1.54 2006/06/01 18:46:32 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klaptopdaemon/Attic/ChangeLog,v 1.55 2006/07/09 19:58:26 flameeyes Exp $
+
+  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
+  klaptopdaemon-3.5.2.ebuild, klaptopdaemon-3.5.3.ebuild:
+  Pinpoint virtual/x11 version to less than 7.
 
 *klaptopdaemon-3.5.3 (01 Jun 2006)
 
