--- a/media-video/transcode/ChangeLog
+++ b/media-video/transcode/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/transcode
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/transcode/ChangeLog,v 1.148 2006/06/25 19:00:52 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/transcode/ChangeLog,v 1.149 2006/07/09 20:12:41 flameeyes Exp $
+
+  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
+  transcode-1.0.2-r2.ebuild:
+  Pinpoint virtual/x11 version to less than 7.
 
   25 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
   +files/transcode-1.0.2-autoconf259d.patch, transcode-1.0.2-r2.ebuild:
