--- a/sys-kernel/mm-sources/ChangeLog
+++ b/sys-kernel/mm-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/mm-sources
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/mm-sources/Attic/ChangeLog,v 1.288 2006/07/04 16:54:49 voxus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/mm-sources/Attic/ChangeLog,v 1.289 2006/07/09 20:46:04 phreak Exp $
+
+*mm-sources-2.6.18_rc1-r1 (09 Jul 2006)
+
+  09 Jul 2006; Christian Heim <phreak@gentoo.org>
+  +mm-sources-2.6.18_rc1-r1.ebuild:
+  Version bump
 
 *mm-sources-2.6.17-r6 (04 Jul 2006)
 
