--- a/media-libs/openexr/ChangeLog
+++ b/media-libs/openexr/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/openexr
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/openexr/ChangeLog,v 1.36 2006/06/02 23:11:19 gmsoft Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/openexr/ChangeLog,v 1.37 2006/07/09 21:19:40 pylon Exp $
+
+  09 Jul 2006; Lars Weiler <pylon@gentoo.org> openexr-1.2.2-r2.ebuild:
+  Stable on ppc.
 
   02 Jun 2006; Guy Martin <gmsoft@gentoo.org> openexr-1.2.2-r2.ebuild:
   Stable on hppa.
