--- a/net-analyzer/etherape/ChangeLog
+++ b/net-analyzer/etherape/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/etherape
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/etherape/ChangeLog,v 1.33 2006/03/10 19:34:18 hansmi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/etherape/ChangeLog,v 1.34 2006/07/09 22:39:24 vanquirius Exp $
+
+  09 Jul 2006; Marcelo Goes <vanquirius@gentoo.org>
+  -files/etherape-0.9.0-libpcap-include.patch,
+  -files/etherape-0.9.0-res_mkquery.patch, -files/etherape-0.9.1-gcc4.diff,
+  -files/etherape-0.9.1-res_mkquery.patch, -etherape-0.9.3.ebuild:
+  Remove old ebuilds/files.
 
   10 Mar 2006; Michael Hanselmann <hansmi@gentoo.org> etherape-0.9.4.ebuild:
   Stable on ppc.
