--- a/media-sound/bmpx/ChangeLog
+++ b/media-sound/bmpx/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/bmpx
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/bmpx/Attic/ChangeLog,v 1.38 2006/07/04 15:19:34 chutzpah Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/bmpx/Attic/ChangeLog,v 1.39 2006/07/10 01:37:08 chutzpah Exp $
+
+*bmpx-0.20.1.1 (10 Jul 2006)
+
+  10 Jul 2006; Patrick McLean <chutzpah@gentoo.org> +bmpx-0.20.1.1.ebuild:
+  Version bump, will be package.masked until bug #139488 can be sorted out.
+  Will try to get neon SLOT'ed.
 
 *bmpx-0.20_beta1 (04 Jul 2006)
 
