--- a/media-plugins/quodlibet-trayicon/ChangeLog
+++ b/media-plugins/quodlibet-trayicon/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/quodlibet-trayicon
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/quodlibet-trayicon/Attic/ChangeLog,v 1.1 2006/07/09 03:56:25 tcort Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/quodlibet-trayicon/Attic/ChangeLog,v 1.2 2006/07/10 01:58:42 tcort Exp $
+
+  10 Jul 2006; Thomas Cort <tcort@gentoo.org>
+  quodlibet-trayicon-3493.ebuild:
+  Added ~alpha keyword.
 
 *quodlibet-trayicon-3493 (09 Jul 2006)
 
