--- a/media-plugins/quodlibet-reset/ChangeLog
+++ b/media-plugins/quodlibet-reset/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/quodlibet-reset
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/quodlibet-reset/Attic/ChangeLog,v 1.1 2006/05/03 04:29:42 tcort Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/quodlibet-reset/Attic/ChangeLog,v 1.2 2006/07/10 02:03:59 tcort Exp $
+
+  10 Jul 2006; Thomas Cort <tcort@gentoo.org> quodlibet-reset-3065.ebuild:
+  Added ~alpha keyword.
 
 *quodlibet-reset-3065 (03 May 2006)
 
