--- a/media-plugins/gst-plugins-cdparanoia/ChangeLog
+++ b/media-plugins/gst-plugins-cdparanoia/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-cdparanoia
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-cdparanoia/ChangeLog,v 1.79 2006/06/12 10:11:23 zaheerm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-cdparanoia/ChangeLog,v 1.80 2006/07/10 05:41:35 tcort Exp $
+
+  10 Jul 2006; Thomas Cort <tcort@gentoo.org>
+  gst-plugins-cdparanoia-0.10.4.ebuild:
+  Stable on alpha.
 
 *gst-plugins-cdparanoia-0.10.8 (12 Jun 2006)
 
