--- a/x11-misc/xorg-cf-files/ChangeLog
+++ b/x11-misc/xorg-cf-files/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/xorg-cf-files
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xorg-cf-files/ChangeLog,v 1.23 2006/07/01 01:25:15 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xorg-cf-files/ChangeLog,v 1.24 2006/07/10 11:50:46 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  xorg-cf-files-1.0.2.ebuild:
+  Mark 1.0.2 stable on ia64
 
   01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xorg-cf-files-1.0.2.ebuild:
