--- a/x11-proto/inputproto/ChangeLog
+++ b/x11-proto/inputproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/inputproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/inputproto/ChangeLog,v 1.25 2006/06/30 23:07:28 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/inputproto/ChangeLog,v 1.26 2006/07/10 12:51:52 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> inputproto-1.3.2.ebuild:
+  Mark 1.3.2 stable on ia64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   inputproto-1.3.2.ebuild:
