--- a/x11-proto/xextproto/ChangeLog
+++ b/x11-proto/xextproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/xextproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xextproto/ChangeLog,v 1.23 2006/06/30 23:11:15 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xextproto/ChangeLog,v 1.24 2006/07/10 12:55:23 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> xextproto-7.0.2.ebuild:
+  Mark 7.0.2 stable on ia64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xextproto-7.0.2.ebuild:
