--- a/x11-libs/libX11/ChangeLog
+++ b/x11-libs/libX11/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libX11
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.44 2006/07/01 04:45:37 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.45 2006/07/10 13:08:27 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> libX11-1.0.1-r1.ebuild:
+  Mark 1.0.1-r1 stable on ia64
 
   01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; Manifest:
   Fix manifest.
