--- a/x11-proto/xineramaproto/ChangeLog
+++ b/x11-proto/xineramaproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xineramaproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xineramaproto/ChangeLog,v 1.25 2006/06/30 23:13:38 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xineramaproto/ChangeLog,v 1.26 2006/07/10 13:45:08 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  xineramaproto-1.1.2.ebuild:
+  Mark 1.1.2 stable on ia64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xineramaproto-1.1.2.ebuild:
