--- a/x11-proto/recordproto/ChangeLog
+++ b/x11-proto/recordproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/recordproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/recordproto/ChangeLog,v 1.23 2006/06/30 23:08:51 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/recordproto/ChangeLog,v 1.24 2006/07/10 13:49:05 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> recordproto-1.13.2.ebuild:
+  Mark 1.13.2 stable on ia64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   recordproto-1.13.2.ebuild:
