--- a/app-vim/conky-syntax/ChangeLog
+++ b/app-vim/conky-syntax/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-vim/conky-syntax
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/conky-syntax/Attic/ChangeLog,v 1.11 2006/05/21 17:15:51 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/conky-syntax/Attic/ChangeLog,v 1.12 2006/07/10 14:05:29 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  conky-syntax-20050923.ebuild:
+  Mark 20050923 stable on ia64
 
   21 May 2006; Markus Rothe <corsair@gentoo.org>
   conky-syntax-20050923.ebuild:
