--- a/x11-libs/libXTrap/ChangeLog
+++ b/x11-libs/libXTrap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXTrap
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXTrap/ChangeLog,v 1.20 2006/06/30 23:33:56 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXTrap/ChangeLog,v 1.21 2006/07/10 14:11:43 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> libXTrap-1.0.0.ebuild:
+  Mark 1.0.0 stable on ia64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   libXTrap-1.0.0.ebuild:
