--- a/x11-libs/libXfixes/ChangeLog
+++ b/x11-libs/libXfixes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXfixes
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXfixes/ChangeLog,v 1.30 2006/06/30 23:27:40 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXfixes/ChangeLog,v 1.31 2006/07/10 14:34:36 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> libXfixes-4.0.1.ebuild:
+  Mark 4.0.1 stable on ia64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   libXfixes-4.0.1.ebuild:
