--- a/dev-perl/Curses-UI/ChangeLog
+++ b/dev-perl/Curses-UI/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Curses-UI
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Curses-UI/ChangeLog,v 1.15 2006/07/04 07:09:27 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Curses-UI/ChangeLog,v 1.16 2006/07/10 15:04:40 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Curses-UI-0.95.ebuild:
+  Mark 0.95 stable on ia64
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org> Curses-UI-0.94.ebuild,
   Curses-UI-0.95.ebuild:
