--- a/net-analyzer/knetscan/ChangeLog
+++ b/net-analyzer/knetscan/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/knetscan
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/knetscan/Attic/ChangeLog,v 1.17 2006/06/29 18:10:29 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/knetscan/Attic/ChangeLog,v 1.18 2006/07/10 15:19:27 blubb Exp $
+
+  10 Jul 2006; Simon Stelling <blubb@gentoo.org> knetscan-1.0.ebuild:
+  stable on amd64
 
 *knetscan-1.0-r1 (29 Jun 2006)
 
