--- a/dev-perl/Encode-HanConvert/ChangeLog
+++ b/dev-perl/Encode-HanConvert/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Encode-HanConvert
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Encode-HanConvert/ChangeLog,v 1.4 2006/03/30 22:33:37 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Encode-HanConvert/ChangeLog,v 1.5 2006/07/10 15:21:21 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  Encode-HanConvert-0.31.ebuild:
+  Mark 0.31 stable on ia64
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
   Encode-HanConvert-0.31.ebuild:
