--- a/dev-perl/Exporter-Cluster/ChangeLog
+++ b/dev-perl/Exporter-Cluster/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Exporter-Cluster
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Exporter-Cluster/ChangeLog,v 1.4 2006/06/26 20:14:35 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Exporter-Cluster/ChangeLog,v 1.5 2006/07/10 15:26:46 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  Exporter-Cluster-0.31.ebuild:
+  Mark 0.31 stable on ia64
 
   26 Jun 2006; Michael Cummings <mcummings@gentoo.org>
   Exporter-Cluster-0.31.ebuild:
