--- a/dev-perl/ExtUtils-XSBuilder/ChangeLog
+++ b/dev-perl/ExtUtils-XSBuilder/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/ExtUtils-XSBuilder
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/ExtUtils-XSBuilder/ChangeLog,v 1.16 2006/07/04 08:34:26 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/ExtUtils-XSBuilder/ChangeLog,v 1.17 2006/07/10 15:28:27 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  ExtUtils-XSBuilder-0.28.ebuild:
+  Mark 0.28 stable on ia64
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org>
   ExtUtils-XSBuilder-0.27.ebuild, ExtUtils-XSBuilder-0.28.ebuild:
