--- a/dev-perl/FileHandle-Rollback/ChangeLog
+++ b/dev-perl/FileHandle-Rollback/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/FileHandle-Rollback
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/FileHandle-Rollback/Attic/ChangeLog,v 1.9 2006/03/30 22:39:51 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/FileHandle-Rollback/Attic/ChangeLog,v 1.10 2006/07/10 15:42:18 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  FileHandle-Rollback-1.05.ebuild:
+  Mark 1.05 stable on ia64
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
   FileHandle-Rollback-1.05.ebuild:
