--- a/dev-perl/Finance-YahooQuote/ChangeLog
+++ b/dev-perl/Finance-YahooQuote/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Finance-YahooQuote
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Finance-YahooQuote/ChangeLog,v 1.11 2006/07/04 08:46:33 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Finance-YahooQuote/ChangeLog,v 1.12 2006/07/10 15:46:18 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  Finance-YahooQuote-0.21.ebuild:
+  Mark 0.21 stable on ia64
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org>
   Finance-YahooQuote-0.20.ebuild, Finance-YahooQuote-0.21.ebuild:
