--- a/x11-proto/fontsproto/ChangeLog
+++ b/x11-proto/fontsproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/fontsproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/fontsproto/ChangeLog,v 1.23 2006/06/30 23:06:48 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/fontsproto/ChangeLog,v 1.24 2006/07/10 15:52:33 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> fontsproto-2.0.2.ebuild:
+  Mark 2.0.2 stable on ia64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   fontsproto-2.0.2.ebuild:
