--- a/net-analyzer/darkstat/ChangeLog
+++ b/net-analyzer/darkstat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/darkstat
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/darkstat/ChangeLog,v 1.18 2006/07/08 14:15:05 lu_zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/darkstat/ChangeLog,v 1.19 2006/07/10 15:58:46 grobian Exp $
+
+  10 Jul 2006; Fabian Groffen <grobian@gentoo.org> darkstat-3.0.524.ebuild:
+  Marked ~ppc-macos (bug #139628)
 
   08 Jul 2006; Luca Barbato <lu_zero@gentoo.org> darkstat-3.0.524.ebuild:
   Marked ~ppc
