--- a/dev-perl/HTTP-Cache-Transparent/ChangeLog
+++ b/dev-perl/HTTP-Cache-Transparent/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/HTTP-Cache-Transparent
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTTP-Cache-Transparent/ChangeLog,v 1.17 2006/07/04 10:23:01 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTTP-Cache-Transparent/ChangeLog,v 1.18 2006/07/10 16:02:38 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  HTTP-Cache-Transparent-0.7.ebuild:
+  Mark 0.7 stable on ia64
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org>
   HTTP-Cache-Transparent-0.5.ebuild, HTTP-Cache-Transparent-0.6.ebuild,
