--- a/dev-perl/HTTP-Server-Simple/ChangeLog
+++ b/dev-perl/HTTP-Server-Simple/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/HTTP-Server-Simple
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTTP-Server-Simple/ChangeLog,v 1.11 2006/06/23 23:55:24 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTTP-Server-Simple/ChangeLog,v 1.12 2006/07/10 16:04:56 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  HTTP-Server-Simple-0.18.ebuild:
+  Mark 0.18 stable on ia64
 
   23 Jun 2006; Michael Cummings <mcummings@gentoo.org>
   HTTP-Server-Simple-0.20.ebuild:
